# gmail-filter-lib

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
editor/: app.js  index.html  style.css
examples/: complex-rules.py  run-all.sh  simple-single-rule.py
lib/: Cli.py  Expr.py  FilterConfig.py  Gmail.py  cli.py  filter_config.py  gmail.py
scripts/: gmail-filter-convert.py
tests/: conftest.py  expect.py  test_filter_outputs.py
