[project]
name = "gmail-filter-lib"
version = "0.1.0"
description = "Small library for generating Gmail filter XML from Python code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]

[tool.uv]
package = false
