[project]
name = "gmail-filter-lib"
version = "0.1.0"
description = "Small library for generating Gmail filter XML from Python code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.scripts]
gmail-filter = "Cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "lib"}
py-modules = ["Cli", "Expr", "FilterConfig", "Gmail"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
